Pojasnjenja za dokumentaciju

--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -12,8 +11,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -36,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 1,
       "metadata": {
         "id": "4HMHsJKcr9YZ"
       },
@@ -67,7 +65,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gv0zbCjf1Cy4",
-        "outputId": "46c6f3bc-6060-4c10-9aaa-c2fd03f4ba2a"
+        "outputId": "68392976-7ef3-4d6f-91a2-16b8b2086db8"
       },
       "execution_count": 2,
       "outputs": [
@@ -76,7 +74,7 @@
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         },
         {
@@ -103,7 +101,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Za prikazivanje cijelih komentara\n",
+        "# Za prikazivanje cijelih komentara postaviti na 0\n",
         "pd.set_option(\"max_colwidth\", 100)"
       ],
       "metadata": {
@@ -2093,7 +2091,7 @@
       "metadata": {
         "id": "iQdXSsdYdepQ"
       },
-      "execution_count": 95,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -2108,9 +2106,9 @@
           "height": 206
         },
         "id": "O38zIzvV9V23",
-        "outputId": "8dfc9554-b483-4883-df7f-37ffb6be2c97"
+        "outputId": "0dc47d13-dcc7-4a1e-d0c4-e0461ff6749b"
       },
-      "execution_count": 96,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2125,7 +2123,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ba40e6ad-0034-4eb0-8246-82b4c202306e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4700b253-d8a1-4937-b1bd-e942daeb97a7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2180,7 +2178,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ba40e6ad-0034-4eb0-8246-82b4c202306e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4700b253-d8a1-4937-b1bd-e942daeb97a7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2232,12 +2230,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ba40e6ad-0034-4eb0-8246-82b4c202306e button.colab-df-convert');\n",
+              "        document.querySelector('#df-4700b253-d8a1-4937-b1bd-e942daeb97a7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ba40e6ad-0034-4eb0-8246-82b4c202306e');\n",
+              "        const element = document.querySelector('#df-4700b253-d8a1-4937-b1bd-e942daeb97a7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2257,8 +2255,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-fdfad897-3a5a-42b9-844f-5e82887c45dc\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fdfad897-3a5a-42b9-844f-5e82887c45dc')\"\n",
+              "<div id=\"df-3ca24fce-f880-4a0f-b8ba-79caa22c4041\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3ca24fce-f880-4a0f-b8ba-79caa22c4041')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2377,7 +2375,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-fdfad897-3a5a-42b9-844f-5e82887c45dc button');\n",
+              "        document.querySelector('#df-3ca24fce-f880-4a0f-b8ba-79caa22c4041 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2388,7 +2386,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 4
         }
       ]
     },
@@ -2400,7 +2398,7 @@
       "metadata": {
         "id": "IyiLvIp59V0n"
       },
-      "execution_count": 98,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -2414,9 +2412,9 @@
           "height": 449
         },
         "id": "Tc2x5wIxsb8c",
-        "outputId": "cf4e5403-5f5f-4501-e523-90e6dca888a7"
+        "outputId": "572ac2ae-98ff-44e0-b711-9fd23d5ff2e8"
       },
-      "execution_count": 99,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2439,7 +2437,7 @@
       "metadata": {
         "id": "RfqECwu59VyU"
       },
-      "execution_count": 106,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -2463,7 +2461,7 @@
       "metadata": {
         "id": "xtUlrUtA_2YT"
       },
-      "execution_count": 104,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -2486,7 +2484,7 @@
       "metadata": {
         "id": "CiAXdmB8sqm6"
       },
-      "execution_count": 107,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -2499,7 +2497,7 @@
       "metadata": {
         "id": "D4GFkOJcA_oX"
       },
-      "execution_count": 108,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -2523,9 +2521,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sy_jh59e_JGG",
-        "outputId": "3d333071-f452-40c1-a06e-39d0c99b0bd8"
+        "outputId": "9b071afd-7894-4348-b677-07d7cf043c2f"
       },
-      "execution_count": 109,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2537,7 +2535,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 109
+          "execution_count": 11
         }
       ]
     },
@@ -2552,7 +2550,7 @@
       "metadata": {
         "id": "VzNJ2qEI_bZI"
       },
-      "execution_count": 110,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -2920,7 +2918,7 @@
         },
         "outputId": "d453a3bd-7971-41be-843a-8338b6e7748a"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3026,7 +3024,7 @@
         },
         "outputId": "ca5ece70-4d2f-47d7-9c3f-c69798bf64c8"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3126,29 +3124,29 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0df19215-9be4-4177-9a33-cf4e1be21565"
+        "outputId": "3809e7d2-b746-487a-dd24-692658a5e7bc"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-01-12 20:19:04--  https://nlp.stanford.edu/data/glove.6B.zip\n",
+            "--2024-01-13 11:04:51--  https://nlp.stanford.edu/data/glove.6B.zip\n",
             "Resolving nlp.stanford.edu (nlp.stanford.edu)... 171.64.67.140\n",
             "Connecting to nlp.stanford.edu (nlp.stanford.edu)|171.64.67.140|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip [following]\n",
-            "--2024-01-12 20:19:04--  https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip\n",
+            "--2024-01-13 11:04:52--  https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip\n",
             "Resolving downloads.cs.stanford.edu (downloads.cs.stanford.edu)... 171.64.64.22\n",
             "Connecting to downloads.cs.stanford.edu (downloads.cs.stanford.edu)|171.64.64.22|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 862182613 (822M) [application/zip]\n",
-            "Saving to: ‘glove.6B.zip.1’\n",
+            "Saving to: ‘glove.6B.zip’\n",
             "\n",
-            "glove.6B.zip.1      100%[===================>] 822.24M  4.70MB/s    in 2m 45s  \n",
+            "glove.6B.zip        100%[===================>] 822.24M  5.17MB/s    in 2m 41s  \n",
             "\n",
-            "2024-01-12 20:21:50 (4.98 MB/s) - ‘glove.6B.zip.1’ saved [862182613/862182613]\n",
+            "2024-01-13 11:07:33 (5.12 MB/s) - ‘glove.6B.zip’ saved [862182613/862182613]\n",
             "\n"
           ]
         }
@@ -3164,16 +3162,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ae086832-4d9a-4a0f-a93c-527d430903b4"
+        "outputId": "1b835fa3-8412-4b07-b900-abc53b5dfd56"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Archive:  glove.6B.zip\n",
-            "replace glove.6B.50d.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
+            "  inflating: glove.6B.50d.txt        \n",
+            "  inflating: glove.6B.100d.txt       \n",
+            "  inflating: glove.6B.200d.txt       \n",
+            "  inflating: glove.6B.300d.txt       \n"
           ]
         }
       ]
@@ -3194,7 +3195,7 @@
       "metadata": {
         "id": "KlVBR40j0jAH"
       },
-      "execution_count": 30,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -3220,8 +3221,46 @@
       "metadata": {
         "id": "YTAsmY030nuq"
       },
-      "execution_count": 31,
+      "execution_count": 16,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i, word in enumerate(vocab):\n",
+        "  print(i)\n",
+        "  print(word)\n",
+        "  if i == 5:\n",
+        "    break"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_Hfy9wNzgPGq",
+        "outputId": "f6d8c32e-de3c-4a98-fda4-aaf109d1f17e"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "\n",
+            "1\n",
+            "[UNK]\n",
+            "2\n",
+            "hotel\n",
+            "3\n",
+            "room\n",
+            "4\n",
+            "not\n",
+            "5\n",
+            "stay\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3356,7 +3395,7 @@
       "metadata": {
         "id": "Ve6s7YaGdWcs"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3373,7 +3412,7 @@
       "metadata": {
         "id": "RRGA-ycNcl79"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3404,7 +3443,7 @@
         },
         "outputId": "622c41a2-d825-4cb3-b3b7-f9f63902d1f9"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3505,7 +3544,7 @@
         },
         "outputId": "6e320d84-0594-4786-958f-d33a05b16464"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3531,7 +3570,7 @@
         "id": "EhdNSAKbvjXq",
         "outputId": "35727bd5-b92d-46a6-f5d1-b9e5a5692e9a"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3551,7 +3590,7 @@
       "metadata": {
         "id": "fskvGdz1vjPc"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3572,7 +3611,7 @@
         "id": "RfUjDabaviqQ",
         "outputId": "1ae59c38-a8a8-45c8-8f9e-c9723f5b1192"
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3595,7 +3634,7 @@
       "metadata": {
         "id": "PAMQ5cU0xflv"
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3611,7 +3650,7 @@
         "id": "4HwvODtgyHxQ",
         "outputId": "3d3f5c01-cacb-470a-d6ae-3ba08c9ca7e5"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3947,7 +3986,7 @@
       "metadata": {
         "id": "69AIedqVfzTI"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3962,7 +4001,7 @@
         "id": "5jkp32p7gVR7",
         "outputId": "e907e337-1586-4cd6-b11c-8ff15eebc396"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3991,7 +4030,7 @@
         "id": "mVDL5i4IgyBa",
         "outputId": "0f566523-07db-4df8-80a3-9af457600d13"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4021,7 +4060,7 @@
       "metadata": {
         "id": "D8pn_2l1vw3j"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4038,7 +4077,7 @@
         "id": "Pp0rldfKwZvk",
         "outputId": "a534110d-c580-48ab-e03b-1cf1cafdfde6"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4066,7 +4105,7 @@
       "metadata": {
         "id": "pysbLAoXiq7R"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4085,7 +4124,7 @@
         "id": "Av6Rt2rIkWpj",
         "outputId": "30742cca-afe1-48df-ecb2-f78a06371fc4"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
