--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -12,8 +11,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -28,6 +26,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "// TODO\n",
+        "- probat samo stemming ne stopword removal za treniranje\n",
+        "- ostavit staru preprocess funkciju za nove tekstove\n",
+        "- spremit model na github"
+      ],
+      "metadata": {
+        "id": "idRI9fd4M_Wq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Potrebni moduli"
       ],
       "metadata": {
@@ -36,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "4HMHsJKcr9YZ"
       },
@@ -69,7 +79,7 @@
         "id": "gv0zbCjf1Cy4",
         "outputId": "687080cf-3436-475e-a1be-4447949f8a78"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +119,7 @@
       "metadata": {
         "id": "n6P6qZuZhJIk"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +136,7 @@
         "id": "_MrAmRx3sVNB",
         "outputId": "de5884a7-898b-4d31-ec12-8c69bc37d703"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,7 +447,7 @@
         "id": "Q5wYOR4loih7",
         "outputId": "ce2cdfca-db81-4a57-ce66-a90b2339dd74"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +475,7 @@
         "id": "kAKKcM_MqvvR",
         "outputId": "37175342-bd01-48c6-efd3-f57cdcf8b586"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +511,7 @@
         "id": "3hjGR0JvYOja",
         "outputId": "f7d554da-1982-40c3-8937-5edd6f49d176"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -530,7 +540,7 @@
         "id": "3KrN0dIRYOSw",
         "outputId": "4999e5cc-76ed-4a97-e5dc-5fefb6b18ddc"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -844,7 +854,7 @@
         "id": "DWfjtfzlYOPA",
         "outputId": "b58844ad-01b8-4b5c-bbe3-82cfb471e153"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,7 +1168,7 @@
         "id": "XsKtiyrziRR-",
         "outputId": "4cf964a1-906b-4f0c-9d08-192f23d431f4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1197,7 +1207,7 @@
         "id": "lPjogNzP-9ET",
         "outputId": "8082b102-f031-4131-84da-0ed14b24974a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1223,7 +1233,7 @@
         "id": "MIwHlj1orEGJ",
         "outputId": "472c7712-ce4d-47ec-9e17-e88049037880"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1262,7 +1272,7 @@
         "id": "yU4bt4RX-qDD",
         "outputId": "4bac164e-72e8-4241-82f1-ae712db02daa"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1299,7 +1309,7 @@
         "id": "LzIwWyhUqfs-",
         "outputId": "000fcc8c-f339-4ace-a5df-00d59f8e182d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1602,7 +1612,7 @@
       "metadata": {
         "id": "o7MMMefOqglB"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1613,7 +1623,7 @@
       "metadata": {
         "id": "oAUH160tqgYi"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1628,7 +1638,7 @@
       "metadata": {
         "id": "J4pcTJO2qgVO"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1644,7 +1654,7 @@
         "id": "dVtG_6qrqgS6",
         "outputId": "6550c968-15a2-4d9e-92c7-e054bd2bfad0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1959,7 +1969,7 @@
         "id": "7k56-hs82ZVq",
         "outputId": "663e51b8-b537-4c11-c2ef-0d3967f6ea87"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1986,7 +1996,7 @@
         "id": "IQGpgfM72ZMC",
         "outputId": "484226ef-5609-42a8-be2a-8a392b02972f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2017,7 +2027,7 @@
       "metadata": {
         "id": "qjC-TIdt2ZJ4"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2035,7 +2045,7 @@
         "id": "J6AwjOQZ2ZHW",
         "outputId": "b41415f7-6eb1-44e8-a332-1ec76131ca5c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2066,7 +2076,7 @@
       "metadata": {
         "id": "VLr-Fska5iei"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2082,7 +2092,7 @@
         "id": "dMoGiHG65iRl",
         "outputId": "04fd6d34-58a3-45d5-97c7-a0f7a927b732"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2122,7 +2132,7 @@
       "metadata": {
         "id": "iQdXSsdYdepQ"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2139,7 +2149,7 @@
         "id": "O38zIzvV9V23",
         "outputId": "1efcb76a-585c-4cbc-ae22-dda55f8d5150"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2436,7 +2446,7 @@
       "metadata": {
         "id": "IyiLvIp59V0n"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2454,7 +2464,7 @@
         "id": "Tc2x5wIxsb8c",
         "outputId": "a985193a-ff2e-4cb5-e140-07fbd00c8a17"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2477,7 +2487,7 @@
       "metadata": {
         "id": "RfqECwu59VyU"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2506,7 +2516,7 @@
       "metadata": {
         "id": "xtUlrUtA_2YT"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2519,7 +2529,7 @@
       "metadata": {
         "id": "D4GFkOJcA_oX"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2545,7 +2555,7 @@
         "id": "Sy_jh59e_JGG",
         "outputId": "7db7695b-f957-467a-deb8-f27cfdcc7ae7"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2572,7 +2582,7 @@
       "metadata": {
         "id": "VzNJ2qEI_bZI"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2610,7 +2620,7 @@
         "id": "14bBIUQd_8wl",
         "outputId": "16ed6291-0735-4587-be13-bbb5a7cf8d17"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2674,7 +2684,7 @@
         },
         "outputId": "cd10fb65-904b-408d-9446-2908ee0893be"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2722,7 +2732,7 @@
         "id": "kNrWf6qWP2mC",
         "outputId": "63048b83-8dd8-47fe-9697-f54c60b76581"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2780,7 +2790,7 @@
         "id": "9l5hvTL8f_2M",
         "outputId": "1919018d-9baa-4d8f-a0aa-3922a2691cd5"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2828,7 +2838,7 @@
         },
         "outputId": "a051fa98-0e67-4827-de52-89c4289c3551"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2890,7 +2900,7 @@
         "id": "B-2QrLAMgPy-",
         "outputId": "f87bbae1-fddd-4c5f-8f25-7f4c370a3301"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2938,7 +2948,7 @@
         },
         "outputId": "778262a9-fa89-45b1-cf5f-d932ce103296"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3006,7 +3016,7 @@
         "id": "PrIChbFcgJbb",
         "outputId": "1c73e683-aa24-4170-b977-9b1dbf5d4170"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3054,7 +3064,7 @@
         },
         "outputId": "cd21298c-a17f-438b-8473-47940a39634c"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3126,7 +3136,7 @@
         },
         "outputId": "a3ad8f4d-4a58-43c5-e4ef-4e265b4d98d3"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3160,7 +3170,7 @@
         },
         "outputId": "d723a981-0ddd-475b-838c-c47287d337e9"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3198,7 +3208,7 @@
         },
         "outputId": "a45880c2-1cb2-48e3-f3ec-22da4c88d456"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3229,7 +3239,7 @@
       "metadata": {
         "id": "KlVBR40j0jAH"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3255,7 +3265,7 @@
       "metadata": {
         "id": "YTAsmY030nuq"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3275,7 +3285,7 @@
         "id": "_Hfy9wNzgPGq",
         "outputId": "c4904bc7-9670-47c9-b411-584d7bb8edec"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3332,7 +3342,7 @@
         "id": "SIY9iMRauGX8",
         "outputId": "14fbc117-51af-420f-eb7c-bf7bd1d527e5"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3400,7 +3410,7 @@
         "id": "BieEyIWsuGVG",
         "outputId": "609216df-5557-43be-bbc8-fec6e2b1433e"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3430,7 +3440,7 @@
       "metadata": {
         "id": "Ve6s7YaGdWcs"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3447,7 +3457,7 @@
       "metadata": {
         "id": "RRGA-ycNcl79"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3478,7 +3488,7 @@
         },
         "outputId": "4ea2e18a-05f0-4658-f1a5-d1ffab7cfd7f"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3575,7 +3585,7 @@
         },
         "outputId": "a93475ea-b44e-44be-c71f-831467f949b4"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3601,7 +3611,7 @@
         "id": "EhdNSAKbvjXq",
         "outputId": "55e6b170-cfa2-4f17-81f6-8d63b4852dcc"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3621,7 +3631,7 @@
       "metadata": {
         "id": "fskvGdz1vjPc"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3642,7 +3652,7 @@
         "id": "RfUjDabaviqQ",
         "outputId": "25bff0c7-40a3-4f01-8919-cb6c64267a0e"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3665,7 +3675,7 @@
       "metadata": {
         "id": "PAMQ5cU0xflv"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3681,7 +3691,7 @@
         "id": "4HwvODtgyHxQ",
         "outputId": "65c02cfd-f80f-44a8-c562-4300517fbc96"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4017,7 +4027,7 @@
       "metadata": {
         "id": "69AIedqVfzTI"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4032,7 +4042,7 @@
         "id": "5jkp32p7gVR7",
         "outputId": "e96bec90-00f3-4d21-9105-f86b6509cd45"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4061,7 +4071,7 @@
         "id": "mVDL5i4IgyBa",
         "outputId": "ba59fe70-d2ef-4897-ca89-0d7ecabd9766"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4091,7 +4101,7 @@
       "metadata": {
         "id": "D8pn_2l1vw3j"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4108,7 +4118,7 @@
         "id": "Pp0rldfKwZvk",
         "outputId": "fff9a9b0-d940-4f18-fee3-b4304532da9d"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4136,7 +4146,7 @@
       "metadata": {
         "id": "pysbLAoXiq7R"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4155,7 +4165,7 @@
         "id": "Av6Rt2rIkWpj",
         "outputId": "d29073e7-86b6-46f0-d648-37d8571c8577"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
